@@ -5,6 +5,7 @@
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:cmf="http://namespaces.zope.org/cmf"
     xmlns:zcml="http://namespaces.zope.org/zcml"
+    xmlns:profilehook="http://namespaces.zope.org/profilehook"
     i18n_domain="ftw.billboard">
 
     <five:registerPackage package="." initialize=".initialize" />
@@ -13,12 +14,16 @@
 
     <!-- Include the sub-packages that use their own configure.zcml files. -->
     <include package="ftw.colorbox" />
+    <include package="ftw.profilehook" />
     <include package=".browser" />
     <include package=".content" />
     <include package=".portlets" />
     <include package=".upgrades" />
 
     <include zcml:condition="installed ftw.lawgiver" file="lawgiver.zcml" />
+
+    <!-- Indexer -->
+    <adapter name="get_ad_expiration_date" factory=".indexer.get_ad_expiration_date" />
 
     <!-- Register the installation GenericSetup extension profile -->
     <genericsetup:registerProfile
@@ -27,6 +32,11 @@
         directory="profiles/default"
         description=""
         provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
+    <profilehook:hook
+        profile="ftw.billboard:default"
+        handler=".hooks.imported"
         />
 
 </configure>
