@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1220</version>
+  <version>1221</version>
   <dependencies>
     <dependency>profile-ftw.colorbox:default</dependency>
   </dependencies>
