@@ -45,10 +45,12 @@ setup(name='ftw.billboard',
       zip_safe=False,
 
       install_requires=[
-        'setuptools',
+        'ftw.calendarwidget',
         'ftw.colorbox',
+        'ftw.profilehook',
         'ftw.upgrade',
         'plone.app.registry',
+        'setuptools',
         ],
       tests_require=tests_require,
       extras_require=dict(tests=tests_require),
